--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.1"
 services:
   db:
-    container_name: sqlnode-postgres
+    container_name: chat-postgres
     image: postgres:10-alpine
     ports:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: ecommerce
+      POSTGRES_DB: chat
   admin:
-    container_name: sqlnode-adminer
+    container_name: chat-adminer
     image: adminer
     restart: always
     depends_on:
